feat: implemented security